Enhance README with detailed simulation instructions
Expanded the guide on running the simulation with detailed instructions on uploading custom instruction sequences and using the NRAM module.